fix(TrayIndicator, stylesheet) fix overflow button sometimes doesn't have padding, simplification hide state

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,3 @@
-.TrayIndicator--on-view {
-	-natural-hpadding: 0;
-	-minimum-hpadding: 0;
-}
-
 .TrayIndicatorPopup StButton {
 	padding: 8px;
 	border-radius: 6px;
